vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_parenthesized_if_expr.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_parenthesized_if_expr.vv:5:3: error: expression evaluated but not used
    3 |     fallback := $embed_file(@FILE)
    4 |     (if cond {
    5 |         $embed_file(@FILE)
      |         ~~~~~~~~~~~~~~~~~~
    6 |     } else {
    7 |         fallback
