vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_parenthesized_if_expr.vv
fn main() {
	cond := true
	fallback := $embed_file(@FILE)
	(if cond {
		$embed_file(@FILE)
	} else {
		fallback
	})
}
